tests/positive/basic/formatdate_tokens/input.ci
void main() {
    int ts = makeEpoch(2025, 3, 11, 14, 32, 7);
    print(formatDate(ts, "YYYY-MM-DD") + "\n");
    print(formatDate(ts, "HH:mm:ss") + "\n");
}
