tests/negative/runtime/glyphat_equal_len/input.ci
void main() {
    print(glyphAt("abc", 3) + "\n");
}
